<resources xmlns:tools="http://schemas.android.com/tools">
    <!--APP STRINGS-->
    <string name="app_name">Alfalab</string>

    <!--MENU STRINGS-->
    <string name="search">Buscar</string>
    <string name="action_settings">Ajustes</string>

    <!--SETTINGS STRINGS-->
    <string name="settings_general_label">General</string>
    <string name="setting_dark_theme_label">Tema oscuro</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="sign_out_subtitle">Cierra tu sesión de Alfalab App.</string>

    <!--CONTEXT MENU-->
    <string name="edit_order">Editar</string>
    <string name="delete_order">Borrar</string>
    <string name="edit_profile_picture">Cambiar foto de perfil</string>
    <string name="delete_profile_picture">Eliminar foto de perfil</string>

    <!--ITEM STRING-->
    <string name="entered">Ingresado</string>
    <string name="delivered_date_text">Entregado</string>
    <string name="notifications_label">Notificaciones</string>
    <string name="home_bottom_item_text">Inicio</string>

    <!--FRAGMENT STRINGS-->
    <string name="orders">Pedidos</string>
    <string name="delivered">Entregados</string>
    <string name="no_items">No hay pedidos %1$s</string>
    <string name="no_messages">No hay nuevos mensajes</string>

    <!--TOAST STRINGS-->
    <string name="check_internet_connection">Revisa tu conexión a internet</string>
    <string name="wrong_credentials">Credenciales invalidas</string>
    <string name="user_exits">Ya existe un usuario con ese correo!</string>
    <string name="signup_error">Ups! hubo un error al crear tu cuenta</string>
    <string name="feed_update_error">El feed no se pudo actualizar</string>

    <!--DIALOG STRINGS-->
    <string name="positive_delete_dialog_button">ELIMINAR</string>
    <string name="cancel_dialog_buttton">CANCELAR</string>
    <string name="positive_discard_dialog_button">DESCARTAR</string>
    <string name="positive_sign_out_dialog_button">CERRAR SESIÓN</string>
    <string name="sign_out_dialog_title">Cerrar sesión?</string>
    <string name="sign_out_dialog_subtitle">Cerrar la sesión de Alfalab App</string>
    <string name="delete_order_dialog_title">Descartar pedido?</string>
    <string name="delete_order_dialog_subtitle">Estás seguro que deseas descartar el pedido?</string>
    <string name="delete_order_question">Eliminar pedido?</string>
    <string name="delete_order_warning">Esta accion no tiene vuelta atrás!</string>
    <string name="token_expired_dialog_title">Token de sesión expirado</string>
    <string name="token_expired_dialog_subtitle">Tu token de inicio de sesión ha expirado, por favor, vuelve a iniciar sesión</string>

    <!--BUTTONS STRINGS-->
    <string name="finalize">FINALIZAR</string>
    <string name="next">SIGUIENTE</string>
    <string name="signin_button">INICIAR SESIÓN</string>
    <string name="signup_button">CREAR CUENTA</string>
    <string name="save">GUARDAR</string>
    <string name="delete">ELIMINAR</string>

    <!--LAYOUTS TITLES STRINGS-->
    <string name="create_order">Crear pedido</string>
    <string name="update_order">Actualizar pedido</string>
    <string name="client_data">Datos del cliente</string>
    <string name="order_data">Datos del pedido</string>

    <!--CDATA STRINGS-->
    <string name="order_number_text"><![CDATA[# %1$d]]></string>
    <string name="order_client_name"><![CDATA[<font color=\'%1$d\'>%2$s %3$s</font>]]></string>
    <string name="order_price"><![CDATA[<font color=\'%1$d\'>Precio</font>: %2$d]]></string>
    <string name="order_quantity"><![CDATA[<font color=\'%1$d\'>Digitalizado</font>: %2$s]]></string>
    <string name="order_type"><![CDATA[<font color=\'%1$d\'>Tipo</font>: %2$s]]></string>
    <string name="hello"><![CDATA[Hola %1$s!]]></string>

    <!--TEXT INPUT STRINGS-->
    <string name="order_client_firstname_hint"><![CDATA[Nombre<font color=\'#cc0029\'>*</font>]]></string>
    <string name="order_client_lastname_hint"><![CDATA[Apellido<font color=\'#cc0029\'>*</font>]]></string>
    <string name="order_level_hint">Forzado</string>
    <string name="order_price_hint"><![CDATA[Precio<font color=\'#cc0029\'>*</font>]]></string>
    <string name="order_comments_hint">Comentarios</string>
    <string name="login_email_hint"><![CDATA[Correo<font color=\'#cc0029\'>*</font>]]></string>
    <string name="login_password_hint"><![CDATA[Contraseña<font color=\'#cc0029\'>*</font>]]></string>
    <string name="confirm_password_hint"><![CDATA[Confirmar contraseña<font color=\'#cc0029\'>*</font>]]></string>

    <string name="client_email_label">Correo</string>
    <string name="client_zone_label">Zona</string>
    <string name="client_instagram_label">Instagram</string>

    <string name="digitalized_label">Digitalizado</string>
    <string name="order_client_firstname_label">Nombre:</string>
    <string name="order_client_lastname_label">Apellido:</string>
    <string name="order_client_email_label">Correo:</string>
    <string name="order_client_instagram_label">Instagram:</string>
    <string name="order_total_price_label">Total:</string>
    <string name="chilean_peso_code">CLP</string>

    <string name="order_type_label">Tipo</string>
    <string name="required">Requerido</string>
    <string name="email_in_use">Correo en uso</string>

    <string name="user_name"><![CDATA[%1$s %2$s]]></string>

    <!--INTRO STRINGS-->
    <string name="first_intro_title">Bienvenido a Alfa-lab app!</string>
    <string name="first_intro_subtitle">Antes de empezar, es necesario ajustar tu nombre para que la app funcione, asi se sabe quien creó un pedido, Listo? Vamos!</string>
    <string name="second_intro_subtitle">Inicia sesión para poder utilizar la aplicación</string>
    <string name="second_intro_title">Iniciar sesión</string>
    <string name="second_intro_forgot_password">Olvidaste tu contraseña?</string>
    <string name="third_intro_title">Crear cuenta 🙌</string>
    <string name="third_intro_subtitle">Ingresa tus datos para crear una cuenta.</string>
    <string name="fourth_intro_title">Todo listo! 🙌</string>
    <string name="fourth_intro_subtitle">Genial! ahora puedes usar la aplicación 🎉</string>
    <string name="order_name_label">Nombre:</string>
    <string name="order_lastname_label">Apellido:</string>
    <string name="order_instagram_label">Instagram:</string>
    <string name="order_email_label">Correo:</string>
    <string name="profile_setting_label">Perfil</string>
    <string name="edit_profile_text">Editar perfil</string>

    <!--REPORT STRINGS-->
    <string name="report_error">Reportar un problema</string>
    <string name="discard_dialog_report_title">¿Descartar reporte?</string>
    <string name="discard_dialog_report_subtitle">Si sales ahora, se perderá el reporte.</string>
    <string name="report_error_instructions">Por favor, únicamente envía comentarios sobre Alfalab App. Visita nuestra sección de como reportar un error, en el repositorio para más información.</string>
    <string name="report_edit_text_hint">¿Cuál es el problema?</string>
    <string name="acra_toast_text">No se pudo enviar el reporte al desarrollador</string>
    <string name="report_sended">Se ha enviado un reporte al desarrollador</string>
    <string name="report_dont_sended">Tu reporte no pudo ser enviado</string>
    <string name="report_max_size">El mensaje es muy pesado, intenta con otra imagen o mensaje.</string>
    <string name="sending_report">Se está enviando tu reporte.</string>
    <string name="report_input_error">Ingrese un mensaje o una imagen.</string>
    <string name="image_select">"Seleccione a una imagen: "</string>
    <string name="send_reports">Enviar reportes al desarrollador</string>
    <string name="send_reports_text">Enviar reportes automáticos al desarrollador cuando se detecte un error en el funcionamiento de la aplicación.</string>
    <string name="send">Enviar</string>
    <string name="sending">Enviando…</string>

    <!--HELP STRINGS-->
    <string name="help">Ayuda</string>
    <string name="help_list_item_1_title">¿Porqué la app necesita de mi nombre?</string>
    <string name="help_list_item_1_subtitle">Al crear un pedido, se señala quien fue quién creó el pedido, solo para tener más órden 😉</string>
    <string name="help_list_item_2_title">¿Qué es el ícono de información que aparece en los pedidos en el inicio?</string>
    <string name="help_list_item_2_subtitle">Es solo un recordatorio que te avisa que un pedido lleva más de 10 dias sin entregar.</string>
    <string name="help_list_item_3_title">¿La aplicación envía reportes de error?</string>
    <string name="help_list_item_3_subtitle">Los reportes ayudan al desarrollador identificar problemas en el funcionamiento de la aplicación. Estos son enviados de forma automática y anónima, por lo que no tienes por qué preocuparte. De igual manera puedes generar un reporte de error en Ajustes. Puedes ajustar esto en Ajustes.</string>
    <string name="help_list_item_4_title">¿La App funciona sin internet?</string>
    <string name="help_list_item_4_subtitle" tools:ignore="Typos">Por el momento no 😔, pero pronto se incorporará la función en la App. Mientras tanto puedes vizualizar los pedidos que se hayan cargado cuando inicias la App.</string>

    <!--THIRD PARTY LIBRARIES STRINGS-->
    <string name="libraries_we_use">Librerías que utilizamos</string>
    <string name="third_party_libraries_title">Librerías de Terceros</string>
    <string name="third_party_libraries_text">Lo siguiente establece la atribución para el software de terceros que puede estar contenido en partes del producto Alfalab App. Agradecemos a la comunidad de código abierto por todas sus contribuciones.</string>

    <!--CONTENT DESCRIPTIONS STRINGS-->
    <string name="expandable_item_icon_content_description">Item arrow down</string>
    <string name="profile_icon_description">Profile icon</string>
    <string name="item_more_menu_icon_content_description">Item more menu icon</string>
    <string name="alert_icon_content_description">Alert icon</string>
    <string name="checkmark_icon_content_description">Checkmark icon</string>
    <string name="add_report_image_content_description">Add report image</string>
    <string name="delete_report_image_icon_content_description">Eliminar imagen de reporte</string>
    <string name="profile_picture">Profile picture</string>
    <string name="edit_profile_picture_icon_content_description">Editar foto de perfil</string>
    <string name="delete_profile_picture_icon_content_description">Eliminar foto de perfil</string>

    <!--OTHER STRINGS-->
    <string name="responsible_data_disclaimer">Tu nombre se utiliza cuando creas un pedido, asi se muestra quien lo realizó</string>
    <string name="create_account">Crear cuenta</string>
    <string name="do_not_have_an_account">No tienes una cuenta?</string>
    <string name="already_have_an_account">Ya tienes una cuenta?</string>
    <string name="signin">Iniciar sesión</string>
    <string name="do_not_sign_out">No cerrar sesión</string>

</resources>
