<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundColor"
    tools:context=".activities.ReportActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans"
            android:textSize="@dimen/h6_size"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:background="?attr/backgroundColor">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/report_edit_text_hint"
            app:counterEnabled="true"
            app:counterMaxLength="300"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/cursor_drawable"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/report_image"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:padding="@dimen/image_padding"
                android:src="@drawable/ic_add_24dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/border_report_image"
                android:contentDescription="@string/add_report_image_content_description"
            />

            <ImageView
                android:id="@+id/delete"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginVertical="88dp"
                android:layout_marginHorizontal="38dp"
                android:src="@drawable/ic_baseline_close_24"
                android:visibility="gone"
                android:contentDescription="@string/delete_report_image_icon_content_description"
            />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_error_instructions"
            android:textColor="?attr/textDisabled"
        />

    </LinearLayout>

</LinearLayout>