<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="480dp"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:padding="20dp">

    <View
        android:layout_width="152dp"
        android:layout_height="7dp"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bottom_sheet_indicator"
    />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/type_input_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        style="@style/TypeInputLayoutStyle"
        android:layout_marginTop="15dp">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/type_input_autocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_type_label"
            android:textColor="?attr/textColor"
            android:labelFor="@+id/client_order_type"
            android:inputType="none"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/level_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:helperText="Ingresa un valor entre -7 y 7. De no tener, ingresa un 0"
        android:hint="@string/order_level_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/level_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:inputType="numberSigned"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/digitized_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/digitalized_label"
            android:textAlignment="center"
            android:textColor="?attr/textColor"
            android:fontFamily="@font/product_sans"
            style="@style/Widget.App.CheckBox"
            app:buttonTint="@color/colorAccent"
        />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/price_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:inputType="number"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/commentaries_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/order_comments_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/commentaries_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textColor="?attr/textColor"
            android:lines="2"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_marginTop="77dp"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="25dp"
        app:icon="@drawable/ic_check_24dp"
        app:iconGravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_intro_input_layout"
        app:layout_constraintVertical_bias="0.959"
    />

</LinearLayout>